k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: osi-cards
  labels:
    app: osi-cards
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: osi-cards
  sessionAffinity: None
